src/test/ui/resolve/issue-10200.stderr
error[E0532]: expected tuple struct or tuple variant, found function `foo`
  --> $DIR/issue-10200.rs:6:9
   |
LL | struct Foo(bool);
   | ----------------- similarly named tuple struct `Foo` defined here
...
LL |         foo(x)
   |         ^^^ help: did you mean `Foo`? (a similarly named tuple struct)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0532`.
